# CalaPY-ML

./: .gitignore  README.md  pyproject.toml  release_a_new_version.md  setup.py
calapy-ml/: __init__.py
calapy-ml/rl/ql/dqc/: train_with_same_time_sizes.py
calapy-ml/rl/ql/dqn/: module.py  module_old.py
calapy-ml/sl/dl/: train.py
calapy-ml/sl/dl/datasets/: image.py  loaders.py  tools.py
calapy-ml/sl/dl/models/: model_tools.py
calapy-ml/sl/dl/models/multi_layers/: hetero.py
calapy-ml/sl/dl/models/multi_layers/homo/: rnns.py
calapy-ml/sl/dl/models/single_layers/trainable/: conv.py
src/calapy-ml/: __init__.py
src/calapy-ml/sl/dl/: test.py
src/calapy-ml/sl/dl/datasets/: csv_old.py  loaders_old.py
src/calapy-ml/sl/dl/models/: image.py
src/smartdatafit/rl/ql/dqc/: train_with_same_time_sizes.py
src/smartdatafit/rl/ql/dqn/: module_old.py
src/smartdatafit/sl/dl/: preprocess.py  test.py  train.py
src/smartdatafit/sl/dl/datasets/: csv_old.py  loaders.py
src/smartdatafit/sl/dl/models/multi_layers/homo/: rnns.py
src/smartdatafit/sl/dl/models/single_layers/trainable/: conv.py
src/smartdatafit/sl/dl/output_methods/: general.py
src/smartlearning/rl/ql/dqn/: module.py
src/smartlearning/sl/dl/: preprocess.py
src/smartlearning/sl/dl/datasets/: image.py  loaders.py  loaders_old.py  tools.py
src/smartlearning/sl/dl/models/: image.py
src/smartlearning/sl/dl/models/multi_layers/: hetero.py
src/smartlearning/sl/dl/models/multi_layers/homo/: _base.py  fcns.py
src/smartlearning/sl/dl/models/single_layers/: non_trainable.py
src/smartlearning/sl/dl/models/single_layers/trainable/: recurrent.py
src/smartlearning/sl/dl/output_methods/: general.py
