[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calapy-ml"
version = "0.0.0.0"
requires-python = ">= 3.6"
authors = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
maintainers = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
description = "Personal Package"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["basic", "tools", "toolkit", "toolbox", "kit", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ccalafiore/CalaPy-ML"
Issues = "https://github.com/ccalafiore/CalaPy-ML/issues"
