[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smartdatafit"
version = "0.0.0.0"
dependencies = [
    "independent",
    "torch",
    "torchvision",
    "Pillow",
]
requires-python = ">= 3.7"
authors = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
maintainers = [
    {name = "Carmelo Calafiore", email = "dr.carmelo.calafiore@gmail.com"},
]
description = "A Python Package for Machine Learning"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
    "machine learning", "ml",
    "supervised learning",
#    "unsupervised learning",
    "reinforcement learning",
    "deep learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/ccalafiore/Python-Package-SmartDataFit"
Issues = "https://github.com/ccalafiore/Python-Package-SmartDataFit/issues"
